--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 	<!-- 包裹层 -->
 	<div class="wrap">
 		<!-- 头部 -->
-		<div id="header" class="gradient"></div>
+		<div id="header" class="gradient">
+			<!-- 关于标签的选择:尽量选择简单的标签结构。dl、ul适用于标签内容较多的情况 -->
+			<p class="city">
+				切换城市:
+				<a href="#" class="active">北京</a>
+				<a href="#">上海</a>
+				<a href="#">福州</a>
+				<a href="#">广州</a>
+				<a href="#">青岛</a>
+			</p>
+			<p class="link">
+				<a href="#">加盟100度</a>
+				<a href="#">店铺管理</a>
+			</p>
+		</div>
 		<!-- 导航 -->
 		<div id="nav"></div>
 		<!-- 搜索 -->
