completed header part

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 				<a href="#">青岛</a>
 			</p>
 			<p class="link">
-				<a href="#">加盟100度</a>
-				<a href="#">店铺管理</a>
+				<a href="#" class="join">加盟100度</a>
+				|
+				<a href="#" class="manage">店铺管理</a>
 			</p>
 		</div>
 		<!-- 导航 -->
