completed the part nav

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<!-- 图标 -->
 	<link rel="shortcut icon" href="img/100du.ico" />
+	<!--[if IE 6]>
+	<script type="text/javascript" src="js/DD_belatedPNG_0.0.8a-min.js"></script>
+	<script type="text/javascript" src="js/ie6Fixpng.js"></script>
+	<![endif]-->
 	<title>电商网站</title>
 </head>
 <body>
@@ -28,7 +32,26 @@
 			</p>
 		</div>
 		<!-- 导航 -->
-		<div id="nav"></div>
+		<div id="nav">
+			<!-- 左侧导航 -->
+			<ul class="nav1">
+				<li class="nav-bg-1"><a href="#">美食</a></li>
+				<li class="nav-bg-2"><a href="#">夜店</a></li>
+				<li class="nav-bg-3"><a href="#">购物</a></li>
+				<li class="nav-bg-4"><a href="#">文化</a></li>
+				<li class="nav-bg-5"><a href="#">休闲</a></li>
+			</ul>
+			<!-- logo -->
+			<h1><a href="#"><img src="img/logo.png" alt="100度"></a></h1>
+			<!-- 右侧导航 -->
+			<ul class="nav2 cl">
+				<li class="nav-bg-6"><a href="#">烧客空间</a></li>
+				<li class="nav-bg-7"><a href="#">知道分子</a></li>
+				<li class="nav-bg-8"><a href="#">白吃白拿</a></li>
+				<li class="nav-bg-9"><a href="#">烧客论坛</a></li>
+				<li class="nav-bg-10"><a href="#">企业俱乐部</a></li>
+			</ul>
+		</div>
 		<!-- 搜索 -->
 		<div id="search" class="gradient"></div>
 		<!-- 主体 -->
