completed the search wrap part

--- a/index.html
+++ b/index.html
@@ -53,7 +53,16 @@
 			</ul>
 		</div>
 		<!-- 搜索 -->
-		<div id="search" class="gradient"></div>
+		<div id="search" class="gradient">
+			<ul class="search-tab">
+				<li class="active">搜店</li>
+				<li class="gradient">地址</li>
+				<li class="gradient">优惠券</li>
+				<li class="gradient">全文</li>
+				<li class="gradient">视频</li>
+			</ul>
+			<div class="search-bar"></div>
+		</div>
 		<!-- 主体 -->
 		<div class="cl">
 			<!-- 大块 -->
