completed the search part

--- a/index.html
+++ b/index.html
@@ -61,7 +61,39 @@
 				<li class="gradient">全文</li>
 				<li class="gradient">视频</li>
 			</ul>
-			<div class="search-bar"></div>
+			<div class="search-bar">
+				<img src="img/100du-tag.png" alt="一百度" class="tag">
+				<form action="">
+					<input type="text" value="例如：荷棠鱼坊烤鱼 或 樱花日本料理" class="text">
+					<!-- IE6下不支持h5的image类型的输入框 -->
+					<input type="submit" class="btn" value=''>
+				</form>
+				<div class="hot-search">
+					<p>金钱豹、大江南、湘水之珠、德瑀楼
+					<br />
+					荷棠鱼坊烤鱼、SOHO尚都、湘味楼...</p>
+				</div>
+			</div>
+			<div class="update">
+				<div class="update-wrap">
+					<ul>
+						<li>
+							<a href="#">
+								<em>萱萱</em>
+								<span>5分钟前</span> 写了一篇新文章：那些灿烂华美的瞬间…</a>
+						</li>
+						<li>
+							<a href="#">
+								<em>熊熊</em>
+								<span>7分钟前</span> 写了一篇新文章：那些灿烂华美的瞬间…</a>
+						</li>
+					</ul>
+				</div>
+				<div class="arrow-wrap fr">
+					<div class="arrow a-up-red"></div>
+					<div class="arrow a-down-red"></div>
+				</div>
+			</div>
 		</div>
 		<!-- 主体 -->
 		<div class="cl">
