added the ie6FidPng h2, and completed the video part

--- a/index.html
+++ b/index.html
@@ -102,7 +102,17 @@
 				<!-- 热门展示 -->
 				<div class="main cl">
 					<!-- what hot -->
-					<div class="section fl"></div>
+					<div class="section fl">
+						<h2 class="video-title">WHAT' HOT</h2>
+						<div class="video">
+							<img src="img/video.png" alt="视频模块">
+						</div>
+						<ul class="video-list">
+							<li><a href="#">现场实录:杭州机场国航系统的崩溃</a></li>
+							<li><a href="#">网友自拍国航航班晚点后的遭遇</a></li>
+							<li><a href="#">【拍客】绝对最奢侈的航班&nbsp;注意第41秒</a></li>
+						</ul>
+					</div>
 					<!-- shop tab -->
 					<div class="tab fr">
 						<ul class="slide">
