completed the tab part

--- a/index.html
+++ b/index.html
@@ -116,10 +116,60 @@
 					<!-- shop tab -->
 					<div class="tab fr">
 						<ul class="slide">
-							<li class="active fl">红店铺</li>
-							<li class="gradient fr">新开张</li>
+							<li class="active fl">
+								<h2 class="model-title"><em>HOT SHOP</em>红店铺<a href="javascript:;" class="arrow a-down-red"></a></h2>
+							</li>
+							<li class="gradient fr">
+								<h2 class="model-title"><em>EW SHOP</em>新开张<a href="javascript:;" class="arrow a-down-grey"></a></h2>
+							</li>
 						</ul>
-						<div class="tab-content"></div>
+						<div class="tab-content">
+							<ul class="tab-u" id="t1">
+								<li>
+									<div class="tab-img fl">
+										<img src="img/food.png" alt="国际酒店"/>
+										<img src="img/save.png" alt="节省" class="save"/>
+									</div>
+									<div class="tab-art fl">
+										<a href="#">
+											<h3>御舟和涵珍园国际酒店</h3>
+										</a>
+										<p>区域：朝阳/CBD</p>
+										<p>人均：180元</p>
+										<p>人气：12321</p>
+									</div>
+								</li>
+								<li>
+									<div class="tab-img fl">
+										<img src="img/food.png" alt="国际酒店"/>
+									</div>
+									<div class="tab-art fl">
+										<a href="#">
+											<h3>御舟和涵珍园国际酒店</h3>
+										</a>
+										<p>区域：朝阳/CBD</p>
+										<p>人均：180元</p>
+										<p>人气：12321</p>
+									</div>
+								</li>
+								<li>
+									<div class="tab-img fl">
+										<img src="img/food.png" alt="国际酒店"/>
+									</div>
+									<div class="tab-art fl">
+										<a href="#">
+											<h3>御舟和涵珍园国际酒店</h3>
+										</a>
+										<p>区域：朝阳/CBD</p>
+										<p>人均：180元</p>
+										<p>人气：12321</p>
+									</div>
+								</li>
+							</ul>
+							<div class="more">
+								<img src="img/more.png" alt="查看更多"/>
+							</div>
+						</div>
 					</div>
 				</div>
 				<!-- banner广告1 -->
@@ -138,10 +188,16 @@
 					<!-- subway map tab -->
 					<div class="tab fl">
 						<ul class="slide">
-							<li class="active fl">地铁交通</li>
-							<li class="gradient fr">生活圈</li>
+							<li class="active fl">
+								<h2 class="model-title"><em>SUBWAY</em>地铁交通<a href="javascript:;" class="arrow a-down-red"></a></h2>
+							</li>
+							<li class="gradient fr">
+								<h2 class="model-title"><em>MAP</em>生活圈<a href="javascript:;" class="arrow a-down-grey"></a></h2>
+							</li>
 						</ul>
-						<div class="tab-content"></div>
+						<div class="tab-content">
+							<img src="img/map.png" alt="地铁交通">
+						</div>
 					</div>
 					<!-- bbs -->
 					<div class="section fr"></div>
