completed the calendar and title part

--- a/index.html
+++ b/index.html
@@ -179,7 +179,71 @@
 				<!-- 活动与推荐 -->
 				<div class="main cl">
 					<!-- 每日活动 -->
-					<div class="section fl"></div>
+					<div class="section fl" id="date">
+						<div class="daily">
+							<span class="en">LUCKY YODAY</span>
+							<h3 class="ch">每日活动</h3>
+							<span class="time">2014.2</span>
+						</div>
+						<div class="cl">
+							<img src="img/show.jpg" alt="今日特价" class="fl">
+							<div class="daily-title fr">
+								<h4><em>07</em><em>21</em><strong>本日主题XXXXXXXX</strong></h4>
+								<p>迟到的荣誉--维米尔的写实主义风俗画迟到的荣誉维米尔的写实主义风俗画迟到的荣誉维米尔的写实主义风</p>
+							</div>
+						</div>
+						<dl class="clen cl">
+							<dt>MON</dt>
+							<dt>TUS</dt>
+							<dt>WED</dt>
+							<dt>THU</dt>
+							<dt>FRI</dt>
+							<dt>SAT</dt>
+							<dt>SUN</dt>
+							<dd class="next-mon">29</dd>
+							<dd class="next-mon">30</dd>
+							<dd>1</dd>
+							<dd>2</dd>
+							<dd>3</dd>
+							<dd>4</dd>
+							<dd>5</dd>
+							<dd>6</dd>
+							<dd>7</dd>
+							<dd>8</dd>
+							<dd>9</dd>
+							<dd>10</dd>
+							<dd>11</dd>
+							<dd>12</dd>
+							<dd>13</dd>
+							<dd>14</dd>
+							<dd>15</dd>
+							<dd>16</dd>
+							<dd id="ac1">17</dd>
+							<dd>18</dd>
+							<dd>19</dd>
+							<dd>20</dd>
+							<dd id="today">21</dd>
+							<dd>22</dd>
+							<dd>23</dd>
+							<dd>24</dd>
+							<dd>25</dd>
+							<dd>26</dd>
+							<dd>27</dd>
+							<dd>28</dd>
+							<dd>29</dd>
+							<dd>30</dd>
+							<dd>31</dd>
+							<dd class="next-mon">1</dd>
+							<dd class="next-mon">2</dd>
+							<dd class="next-mon">3</dd>
+							<dd class="next-mon">4</dd>
+							<dd class="next-mon">5</dd>
+							<dd class="next-mon">6</dd>
+							<dd class="next-mon">7</dd>
+							<dd class="next-mon">8</dd>
+							<dd class="next-mon">9</dd>
+						</dl>
+					</div>
 					<!-- 精彩推荐 -->
 					<div class="section fr"></div>
 				</div>
@@ -200,7 +264,11 @@
 						</div>
 					</div>
 					<!-- bbs -->
-					<div class="section fr"></div>
+					<div class="section fr">
+						<h2 class="more-title">
+							<em>BBS</em>论坛<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
+						</h2>
+					</div>
 				</div>
 				<!-- banner广告2 -->
 				<div class="main-ad">
@@ -209,32 +277,72 @@
 				<!-- 知道分子，红人 -->
 				<div class="main cl">
 					<!-- 知道分子 -->
-					<div class="section fl"></div>
+					<div class="section fl">
+						<h2 class="more-title">
+							<em>LIFESTYLE ADVICE</em>知道分子<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
+						</h2>
+					</div>
 					<!-- 红人 -->
-					<div class="section fr"></div>
+					<div class="section fr">
+						<h2 class="more-title">
+							<em>HOT</em>红人烧客<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
+						</h2>
+					</div>
 				</div>
 				<!-- help and media -->
 				<div class="main cl">
 					<!-- help -->
-					<div class="section fl"></div>
+					<div class="section fl">
+						<h2 class="more-title">
+							<em>HELP</em>在线帮助<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
+						</h2>
+					</div>
 					<!-- media -->
-					<div class="section fr"></div>
+					<div class="section fr">
+						<h2 class="more-title">
+							<em>100DU IN THE MEDIA</em>媒体声音<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
+						</h2>
+					</div>
 				</div>
 			</div>
 			<!-- 小块 -->
 			<div class="side-wrap fr">
-				<div class="section-side"></div>
+				<div class="section-side gradient">
+					<h2 class="more-title">
+						<em>LOAD</em>登陆
+					</h2>
+				</div>
 				<div class="side-ad">
 					<img src="img/ad/ad2.jpg" alt="">
 				</div>
 				<div class="side-ad">
 					<img src="img/ad/ad3.jpg" alt="">
 				</div>
-				<div class="section-side"></div>
-				<div class="section-side"></div>
-				<div class="section-side"></div>
-				<div class="section-side"></div>
-				<div class="section-side"></div>
+				<div class="section-side">
+					<h2 class="more-title">
+						<em>COUPONS</em>抢卷儿<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
+					</h2>
+				</div>
+				<div class="section-side">
+					<h2 class="more-title">
+						<em>SHOP</em>今日推荐<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
+					</h2>
+				</div>
+				<div class="section-side">
+					<h2 class="more-title">
+						<em>360o SHOP</em>全景逛店<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
+					</h2>
+				</div>
+				<div class="section-side">
+					<h2 class="more-title">
+						<em>SHOP</em>折扣店<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
+					</h2>
+				</div>
+				<div class="section-side">
+					<h2 class="more-title">
+						<em>COUPONS</em>最新加盟<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
+					</h2>
+				</div>
 			</div>
 		</div>
 		<!-- 尾部 -->
