created a slider,but has a bug in IE6

--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
 					<input type="submit" class="btn" value=''>
 				</form>
 				<div class="hot-search">
-					<p>金钱豹、大江南、湘水之珠、德瑀楼
-					<br />
-					荷棠鱼坊烤鱼、SOHO尚都、湘味楼...</p>
+					<p><a href="#">金钱豹</a>、<a href="#">大江南</a>、<a href="#">湘水之珠</a>、<a href="#">德瑀楼</a>
+					<a href="#">荷棠鱼坊烤鱼</a>、<a href="#">SOHO尚都</a>、<a href="#">湘味楼</a>...</p>
 				</div>
 			</div>
 			<div class="update">
@@ -256,7 +255,47 @@
 						</div>
 					</div>
 					<!-- 精彩推荐 -->
-					<div class="section fr"></div>
+					<div class="section fr" id="recom">
+						<div class="daily">
+							<span class="en">RECOMMEND</span>
+							<h3 class="ch">精彩推荐</h3>
+						</div>
+						<div class="slider-wrap cl">
+								<ul class="big-slider fl">
+									<li class="active">
+										<a href="#"><img src="img/slide/p1.png" alt="" ></a>
+									</li>
+									<li>
+										<a href="#"><img src="img/slide/p2.png" alt=""></a>
+									</li>
+									<li>
+										<a href="#"><img src="img/slide/p3.png" alt=""></a>
+									</li>
+								</ul>
+								<ul class="tab-slider fr">
+									<li class="active">
+										<a href="javascript:;">
+											<img src="img/slide/p1.png" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="javascript:;">
+											<img src="img/slide/p2.png" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="javascript:;">
+											<img src="img/slide/p3.png" alt="">
+										</a>
+									</li>
+								</ul>
+								<ul class="slider-text">
+									<li>爸爸去哪儿~</li>
+									<li>新帽纸</li>
+									<li>大美女</li>
+								</ul>
+							</div>
+					</div>
 				</div>
 				<!-- subway map bbs -->
 				<div class="main cl">
