fixed the height of the tab-content and finished the side tab css part

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			<h2 class="model-title"><em>EW SHOP</em>新开张<a href="javascript:;" class="arrow a-down-grey"></a></h2>
 		</li>
 	</ul>
-	<div class="tab-content">
+	<div class="tab-content" id="topTab">
 		<ul class="tab-u" id="t1">
 			<li>
 				<div class="tab-img fl">
@@ -689,10 +689,31 @@
 </div>
 <!-- 小块 -->
 <div class="side-wrap fr">
-<div class="section-side gradient">
+<div class="section-side gradient" id="loginTitle">
 <h2 class="more-title">
 	<em>LOAD</em>登陆
 </h2>
+</div>
+<div class="login-wrap">
+	<form action="" id="login" class="cl">
+		<ul>
+			<li>
+				<span>用户名 :</span>
+				<input type="text" class="user-input">
+				<input type="checkbox" name="remember" id="remember">
+				<label for="remember">记住我</label>
+			</li>
+			<li>
+				<span>密 码 :</span>
+				<input type="password" class="user-input">
+				<input type="submit" id="smt" value="">
+			</li>
+		</ul>
+	</form>
+	<div class="login-link-wrap cl">
+		<a href="#" class="fl">新用户注册</a>
+		<a href="#" class="fr">忘记密码了?</a>
+	</div>
 </div>
 <div class="side-ad">
 <img src="img/ad/ad2.jpg" alt="">
@@ -721,6 +742,38 @@
 	</ul>
 	<span class="line"></span>
 </div>
+	<h3 class="side-tab-title">
+		<span class="shop-name">商店名</span>
+		<span class="side-save">省</span>
+		<span class="print">打印</span>
+	</h3>
+	<ul id="sideTabUl">
+		<li>
+			<a href="#">老北京一尊皇牛</a>
+			<span class="save-detail">12%</span>
+			<span class="print-detail">345</span>
+		</li>
+		<li>
+			<a href="#">老北京一尊皇牛</a>
+			<span class="save-detail">12%</span>
+			<span class="print-detail">345</span>
+		</li>
+		<li>
+			<a href="#">老北京一尊皇牛</a>
+			<span class="save-detail">12%</span>
+			<span class="print-detail">345</span>
+		</li>
+		<li>
+			<a href="#">老北京一尊皇牛</a>
+			<span class="save-detail">12%</span>
+			<span class="print-detail">345</span>
+		</li>
+		<li class="last-li">
+			<a href="#">老北京一尊皇牛</a>
+			<span class="save-detail">12%</span>
+			<span class="print-detail">345</span>
+		</li>
+	</ul>
 </div>
 <div class="section-side">
 <h2 class="more-title">
