--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 <!-- help and media -->
 <div class="main cl">
 <!-- help -->
-<div class="section fl">
+<div class="section fl help-section">
 	<h2 class="more-title">
 		<em>HELP</em>在线帮助
 	</h2>
@@ -775,30 +775,213 @@
 		</li>
 	</ul>
 </div>
-<div class="section-side">
+<div class="section-side shop-today">
 <h2 class="more-title">
 	<em>SHOP</em>今日推荐<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
 </h2>
+<div class="tab-content recoToday">
+	<ul class="tab-u">
+		<li>
+			<div class="tab-img fl">
+				<img src="img/side-list-img.png" alt="国际酒店"/>
+			</div>
+			<div class="tab-art fl">
+				<a href="#">
+					<h3>汉莱国际美食百汇</h3>
+				</a>
+				<p>口味:创意中餐</p>
+				<p>区域：朝阳/CBD</p>
+			</div>
+		</li>
+		<li>
+			<div class="tab-img fl">
+				<img src="img/side-list-img.png" alt="国际酒店"/>
+			</div>
+			<div class="tab-art fl">
+				<a href="#">
+					<h3>汉莱国际美食百汇</h3>
+				</a>
+				<p>口味:创意中餐</p>
+				<p>区域：朝阳/CBD</p>
+			</div>
+		</li>
+		<li>
+			<div class="tab-img fl">
+				<img src="img/side-list-img.png" alt="国际酒店"/>
+			</div>
+			<div class="tab-art fl">
+				<a href="#">
+					<h3>汉莱国际美食百汇</h3>
+				</a>
+				<p>口味:创意中餐</p>
+				<p>区域：朝阳/CBD</p>
+			</div>
+		</li>
+		<li>
+			<div class="tab-img fl">
+				<img src="img/side-list-img.png" alt="国际酒店"/>
+			</div>
+			<div class="tab-art fl">
+				<a href="#">
+					<h3>汉莱国际美食百汇</h3>
+				</a>
+				<p>口味:创意中餐</p>
+				<p>区域：朝阳/CBD</p>
+			</div>
+		</li>
+	</ul>
+</div>
 </div>
 <div class="section-side">
 <h2 class="more-title">
 	<em>360o SHOP</em>全景逛店<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
 </h2>
+<img src="img/360shop.jpg" alt="" class="shoper">
+<span class="shoper-text">苹果雪梨排骨汤</span>
 </div>
 <div class="section-side">
 <h2 class="more-title">
 	<em>SHOP</em>折扣店<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
 </h2>
+<div class="tab-content recoToday">
+	<ul class="tab-u">
+		<li>
+			<div class="tab-img fl">
+				<img src="img/side-list-img.png" alt="国际酒店"/>
+			</div>
+			<div class="tab-art fl">
+				<a href="#">
+					<h3>汉莱国际美食百汇</h3>
+				</a>
+				<p>口味:创意中餐</p>
+				<p>区域：朝阳/CBD</p>
+			</div>
+		</li>
+	</ul>
+</div>
+<ul class="i-know i-side">
+	<li>
+		<em>[<span>休闲</span>]</em>
+		<a href="#">瀚茶缘(雍和宫店)</a>
+	</li>
+	<li>
+		<em>[<span>休闲</span>]</em>
+		<a href="#">瀚茶缘(雍和宫店)</a>
+	</li>
+	<li>
+		<em>[<span>美食</span>]</em>
+		<a href="#">老北京一尊皇牛</a>
+	</li>
+	<li>
+		<em>[<span>美食</span>]</em>
+		<a href="#">老北京一尊皇牛</a>
+	</li>
+	<li>
+		<em>[<span>休闲</span>]</em>
+		<a href="#">瀚茶缘(雍和宫店)</a>
+	</li>
+	<li>
+		<em>[<span>美食</span>]</em>
+		<a href="#">老北京一尊皇牛</a>
+	</li>
+	<li>
+		<em>[<span>休闲</span>]</em>
+		<a href="#">瀚茶缘(雍和宫店)</a>
+	</li>
+	<li class="last-list">
+		<em>[<span>美食</span>]</em>
+		<a href="#">老北京一尊皇牛</a>
+	</li>
+</ul>
 </div>
 <div class="section-side">
 <h2 class="more-title">
 	<em>COUPONS</em>最新加盟<a href="#" title="点击查看更多"><img src="img/more.png" alt="点击查看更多"></a>
 </h2>
+<div class="join-wrap cl">
+	<div class="tab-content recoToday fl">
+		<ul class="tab-u">
+			<li>
+				<div class="tab-img fl">
+					<img src="img/food.png" alt="国际酒店"/>
+				</div>
+				<div class="tab-art fl">
+					<a href="#">
+						<h3>汉莱国际美食百汇</h3>
+					</a>
+					<p>口味:创意中餐</p>
+					<p>区域：朝阳/CBD</p>
+				</div>
+			</li>
+		</ul>
+	</div>
+	<div class="tab-content recoToday fr">
+		<ul class="tab-u">
+			<li>
+				<div class="tab-img fl">
+					<img src="img/pizza.jpg" alt="国际酒店"/>
+				</div>
+				<div class="tab-art fl">
+					<a href="#">
+						<h3>汉莱国际美食百汇</h3>
+					</a>
+					<p>口味:创意中餐</p>
+					<p>区域：朝阳/CBD</p>
+				</div>
+			</li>
+		</ul>
+	</div>
+</div>
+<ul class="i-know i-side">
+	<li>
+		<em>[<span>休闲</span>]</em>
+		<a href="#">瀚茶缘(雍和宫店)</a>
+	</li>
+	<li>
+		<em>[<span>休闲</span>]</em>
+		<a href="#">瀚茶缘(雍和宫店)</a>
+	</li>
+	<li>
+		<em>[<span>美食</span>]</em>
+		<a href="#">老北京一尊皇牛</a>
+	</li>
+	<li>
+		<em>[<span>美食</span>]</em>
+		<a href="#">老北京一尊皇牛</a>
+	</li>
+	<li>
+		<em>[<span>休闲</span>]</em>
+		<a href="#">瀚茶缘(雍和宫店)</a>
+	</li>
+	<li class="last-list">
+		<em>[<span>美食</span>]</em>
+		<a href="#">老北京一尊皇牛</a>
+	</li>
+</ul>
 </div>
 </div>
 </div>
 <!-- 尾部 -->
-<div id="footer" class="gradient"></div>
+<div id="footer" class="gradient">
+	<p class="links">
+		<a href="#">关于我们</a>
+		|
+		<a href="#">联系我们</a>
+		|
+		<a href="#">版权声明</a>
+		|
+		<a href="#">加入我们</a>
+		|
+		<a href="#">问题反馈</a>
+		|
+		<a href="#">友情链接</a>
+		|
+		<a href="#">网站地图</a>
+		|
+		<a href="#">视频索引</a>
+	</p>
+	<p class="copy">CopyRight &copy; 2008 www.100du.com 100度享乐网 版权所有<span id="ICP">京ICP证07034号</span></p>
+</div>
 </div>
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 </body>
